Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-30608

rpl.rpl_delayed_parallel_slave_sbm sometimes fails with Seconds_Behind_Master should not have used second transaction timestamp

    XMLWordPrintable

Details

    Description

      https://buildbot.mariadb.net/buildbot/builders/kvm-fulltest2/builds/39795

      10.7 bc656c4fa

      rpl.rpl_delayed_parallel_slave_sbm 'row' w3 [ fail ]
              Test ended at 2023-02-07 10:31:30
       
      CURRENT_TEST: rpl.rpl_delayed_parallel_slave_sbm
      mysqltest: At line 102: Seconds_Behind_Master should not have used second transaction timestamp
       
      The result from queries just before the failure was:
      < snip >
      connection slave;
      UNLOCK TABLES;
      include/sync_with_master_gtid.inc
      #
      # Pt 2) If the SQL thread has not entered an idle state, ensure
      # following events do not update SBM
      # Stop slave IO thread so it receives both events together on restart
      connection slave;
      include/stop_slave_io.inc
      connection master;
      # Sleep 2 to allow a buffer between events for SBM check
      insert into t1 values (1);
      # Sleep 3 to create gap between events
      insert into t1 values (2);
      connection slave;
      LOCK TABLES t1 WRITE;
      START SLAVE IO_THREAD;
      # Wait for first transaction to complete SQL delay and begin execution..
      # Validate SBM calculation doesn't use the second transaction because SQL thread shouldn't have gone idle..
      # SBM 0 was more recent than time since last transaction (1 seconds)
      

      Attachments

        Issue Links

          Activity

            People

              bnestere Brandon Nesterenko
              angelique.sklavounos Angelique Sklavounos (Inactive)
              Votes:
              0 Vote for this issue
              Watchers:
              2 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Time Tracking

                  Estimated:
                  Original Estimate - Not Specified
                  Not Specified
                  Remaining:
                  Remaining Estimate - 0d
                  0d
                  Logged:
                  Time Spent - 1d 3h
                  1d 3h

                  Git Integration

                    Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.